2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_write): Fix opening
	mode.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta4.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/search_wrap.c (grub_cmd_search): Handle old
	--fs-uuid --set UUID syntax.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_write): Fix message
	disunification.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common (LDFLAGS_PLATFORM): Use explicit -Wl.

2012-04-18  Mads Kiilerich <mads@kiilerich.com>

         * grub-mkconfig_lib.in: Ignore *.rpmnew and *.rpmsave.

2012-04-18  Mike Gilbert  <floppym@gentoo.org>

	* util/grub.d/10_linux.in: Fix detection of genkernel initramfs.

2012-04-18  Bean  <bean123ch@gmail.com>

	* grub-core/disk/ata.c (grub_ata_strncpy): Put terminating zero at right
	place.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (open_device): New argument max. All
	users updated.
	(grub_util_biosdisk_read): Handle Linux partitions not exactly
	corresponding to GRUB partitions.
	(grub_util_biosdisk_write): Likewise.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Scan mdraid before LVM.

	* include/grub/diskfilter.h (grub_diskfilter_register): Renamed to ..
	(grub_diskfilter_register_front): ... this.
	(grub_diskfilter_register_back): New function.
	All users of grub_diskfilter_register updated.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix an automatic target detection bug.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: New option --efi-directory.

2012-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (allocate_pages): Overwrite low memory
	boot services if we have no other choice.
